--- a/src/views/dashboard.ejs
+++ b/src/views/dashboard.ejs
@@ -8,24 +8,52 @@
 </head>
 
 <body>
-	<h1>Welcome, <%= user.name %>!</h1>
+	<ul>
+		<form action="/logout" method="post">
+			<button type="submit">Logout</button>
+		</form>
 
+	</ul>
+	<h1>Welcome, <%= user %>!</h1>
 	<!-- Display user information -->
-	<p>Name: <%= user.name %></p>
-	<p>Email: <%= user.email %></p>
-
 	<!-- List of tasks -->
+	<% if (tasks.length > 0) { %>
 	<h2>Task List</h2>
 	<ul>
-		<% tasks.forEach(task => { %>
-		<li>
-			<p><%= task.title %> (Status: <%= task.status %>, Priority: <%= task.priority %>)</p>
+		<% tasks.forEach((task) => { %>
+		<li id="<%= task.id %>">
+			<p><%= task.title %> (Status: <%= task.status %>, DueDate: <%= task.dueDate.toISOString().slice(0,10) %> ,
+				Priority:
+				<%= task.priority %>) </p>
+			<div style="display: flex;">
+				<form action="/task/update/<%=task.id%>" method="get">
+					<button type="submit">Update</button> &nbsp;
+				</form>
+				<button onClick='deleteHandler("<%= task.id %>")'>Delete</button>
+			</div>
 		</li>
 		<% }); %>
-	</ul>
-
+	</ul> <br>
+	<% } else {%>
+	<h2>No Task</h2>
+	<% } %>
 	<!-- Add Task Form (if needed) -->
-	<h2>Add New Task <a href="/task/create">Create Task</a></h2>
+	<h2>Add New Task <a href="/task">Create Task</a></h2>
+
+	<script src="/socket.io/socket.io.js"></script>
+	<script>
+		var socket = io()
+		function deleteHandler(index) {
+			socket.emit('deleteTask', { index })
+		}
+
+
+
+		socket.on('Deleted', async (data) => {
+			location.reload()
+			window.alert("Task Deleted Successfully")
+		})
+	</script>
 
 </body>
 
