--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -8,9 +8,13 @@
 </head>
 
 <body>
+	<ul>
+		<li><a href="/">Home</a></li>
+		<li><a href="/signup">Signup</a></li>
+	</ul>
 
 	<h1>User Login</h1>
-	<form action="/user/login" method="POST">
+	<form action="/signin" method="post">
 		<label for="email">Email:</label><br>
 		<input type="email" id="email" name="email" required>
 		<br> <br>
