--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -8,8 +8,11 @@
 </head>
 
 <body>
+	<ul>
+		<li><a href="/">Home</a></li>
+	</ul>
 	<h1>Signup</h1>
-	<form action="/user/signup" method="POST">
+	<form action="/register" method="post">
 		<label for="name">Name:</label><br>
 		<input type="text" id="name" name="name" required>
 		<br>
@@ -21,7 +24,7 @@
 		<br><br>
 		<button type="submit">Sign Up</button>
 	</form>
-	<h2>Already a user click to Login <a href="/user/login">Login</a></h2>
+	<h2>Already a user click to Login <a href="/login">Login</a></h2>
 
 </body>
 
